# PySide6-Shadcn-Widgets

./: =6.5.0  LICENSE  README.md  pyproject.toml  setup.py
examples/: animations_demo.py  basic_components.py  theme_switcher.py
pyside6_shadcn_widgets/: __init__.py
pyside6_shadcn_widgets/animations/: __init__.py  fade.py  scale.py  slide.py
pyside6_shadcn_widgets/components/: __init__.py  badge.py  button.py  card.py  checkbox.py  dialog.py  input.py  progress.py  select.py  switch.py  tabs.py
pyside6_shadcn_widgets/themes/: __init__.py  dark.py  light.py  theme.py
pyside6_shadcn_widgets/utils/: __init__.py  colors.py
tests/: __init__.py
